@@ -1,0 +1,5 @@
+package body Elab8_Pkg is
+
+  procedure Dummy is null;
+
+end Elab8_Pkg;
