@@ -1,3 +1,9 @@
+2019-08-19  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/elab8.adb, gnat.dg/elab8_gen.adb,
+	gnat.dg/elab8_gen.ads, gnat.dg/elab8_pkg.adb,
+	gnat.dg/elab8_pkg.ads: New testcase.
+
 2019-08-19  Bob Duff  <duff@adacore.com>
 
 	* gnat.dg/warn29.adb, gnat.dg/warn29.ads: New testcase.
